--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 20px;
+    padding: 10px;
     /* Title/14PX Regular */
 
     font-size: 14px;
@@ -17,12 +17,13 @@
     justify-content: space-between;
     align-items: center;
     padding-top: 25px;
-    background-color: antiquewhite;
+    padding-bottom: 15px;
 }
 
 .headerLeft {
 
     /* Heading/24PX Bold */
+   
     font-family: Inter;
     font-size: 24px;
     font-style: normal;
@@ -30,6 +31,18 @@
     line-height: 24px;
     /* 100% */
     letter-spacing: 0.72px;
+}
+
+.left{
+    display: flex;
+    justify-content: flex-end;
+    flex: 1.5;
+}
+
+.right{
+    display: flex;
+    justify-content: center;
+    flex: 1;
 }
 
 .headerMiddle ul {
@@ -43,6 +56,7 @@
 /* Title/16PX Regular */
 font-family: Poppins;
 font-size: 16px;
+gap: 10px;
 font-style: normal;
 font-weight: 400;
 line-height: 24px; /* 150% */
@@ -51,6 +65,7 @@ line-height: 24px; /* 150% */
 .headerRight {
     display: flex;
     gap: 10px;
+    align-items: center;
 }
 
 
@@ -58,4 +73,23 @@ line-height: 24px; /* 150% */
     .headerMiddle ul{
         display: none;
     }
+}
+
+.searchContainer{
+    display: flex;
+    flex-direction: row;
+    /* gap: 10px; */
+    border: 1px solid black;
+    padding: 5px;
+    border-radius: 30px;
+}
+.searchContainer > input{
+    border: none;
+    outline: none;
+
+    padding-left: 15px;
+
+}
+.searchContainer > a{
+    padding-right: 10px;
 }
